Fix uneven text of user name in user card

--- a/app/assets/stylesheets/blog_style.css
+++ b/app/assets/stylesheets/blog_style.css
@@ -46,7 +46,7 @@ body {
 }
 
 .user-card > * {
-  flex: auto;
+  flex: 1;
   padding: 0 5%;
 }
 
